v0.20 - IN PROGRESS

    Enhancements:
        - Validate colors and linestyles when set instead of waiting for matplotlib to draw, or SVG to silently fail

    Fixes:
        - Gate anchor position on Pmos2
        - Updated `Arrow` docstring with correct `arrowwidth` and `arrowlength` parameters
        - Fixed Arc arrowheads post-transformation
        - Fixed CurrentLabel arrow offset


v0.19 - 2024-04-27

    Enhancements:
        - Added `scalex` and `scaley` for asymmetric zooming/scaling of Elements
        - Added ElementImage for placing PNG and SVG images as an Element
        - Added pictorial elements
        - Load Fritzing Part files (breadboard view)
        - Added `.pin` and `.side` methods to Ic Element
        - Added `mathfont` parameter to drawing config method

    Fixes:
        - Fixed `tox` and `toy` methods when the Elemnet defines a theta
        - Fixed vertical offset of labels below an Element
        - Fixed reversing of CurrentLabel.
        - Update Ic Element to respect `pinspacing` when `size` is also provided
        - SVG backend accepts color tuples (r, g, b) in the range 0-1, mirroring Matplotlib
        - Tighten bounding box around text elements (when using ziamath)


v0.18 - 2023-12-29

    Enhancements:
        - Automatically increase size of flowchart boxes to fit the text
        - Added Container element to automatically draw a box around a group of elements
        - Internally track drawing state so that `d.add` or `d +=` is no longer necessary when adding elements inside a context manager
        - Default element attributes may be set using `Element.defaults` dictionary. For example, to fill all Diodes, set `elm.Diode.defaults['fill'] = True`.

    New Elements:
        - Lamp2
        - Terminal

    Other changes: