@@ -2,7 +2,7 @@ version: 2
 build:
   os: "ubuntu-20.04"
   tools:
-    python: "3.8"
+    python: "3.9"
 sphinx:
   configuration: docs/conf.py
   fail_on_warning: false
